# kloak

./: .gitignore  .upstream-sync  README-UBUNTU.md  README.md  build-deb.sh  build.sh  sync-upstream.sh
auto-generated-man-pages/: kloak.8
c/: Makefile  build-arm64-sysroot.sh
c/src/: kloak.c  uinput.c  uinput.h  uinput_smoke.c
deb/package/DEBIAN/: control  postinst  prerm
deb/package/etc/apparmor.d/: usr.bin.kloak
deb/package/usr/lib/systemd/system/: kloak.service
debian/: changelog  control
docs/: backlog.md
docs/plans/: 2026-04-18-kloak-uinput-output.md  2026-04-18-kloak-vm-pointer-design.md  2026-04-18-kloak-vm-pointer-plan.md  2026-04-18-kloak-vm-pointer-v2-plan.md
rust/: .gitignore  Cargo.toml  Makefile  build-arm64-sysroot.sh
rust/src/: config.rs  escape.rs  evdev.rs  event.rs  hotplug.rs  keys.rs  lib.rs  libinput_ctx.rs  main.rs  queue.rs  scroll.rs  time_src.rs  translate.rs  uinput.rs  urandom.rs
rust/tests/: uinput_root.rs
rust/tests/smoke/: stage4_keystroke_delay_and_escape.py
